refactoring of config files

--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,8 @@
+
 [postgresql]
 host=postges.cbzpdv2uvyom.eu-central-1.rds.amazonaws.com
 database=AWS_Edu
 user=postgres
 password=ppostgres
+[s3]
+bucket_name=dklmn-epam
