--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ __pycache__/config.cpython-39.pyc
 __pycache__/flaskapp.cpython-39.pyc
 flask/
 __pycache__/s3.cpython-39.pyc
+__pycache__/rdb_store.cpython-39.pyc
