sns subsciptions confirmation

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ __pycache__/rdb_store.cpython-39.pyc
 __pycache__/rdb_store.cpython-39.pyc
 __pycache__/rdb_store.cpython-39.pyc
 app.log
+__pycache__
+/.vscode/launch.json
