--- a/settings.ini
+++ b/settings.ini
@@ -4,5 +4,10 @@ host=postges.cbzpdv2uvyom.eu-central-1.rds.amazonaws.com
 database=AWS_Edu
 user=postgres
 password=ppostgres
+
 [s3]
 bucket_name=dklmn-epam
+
+[sns]
+bucket_name=S3-Events-Hub
+
